selectedDirectorFilm layout bugfix - oof

--- a/src/components/Director.css
+++ b/src/components/Director.css
@@ -7,7 +7,7 @@ a {
 
 .director {
   width: 100%;
-  height: 60vh;
+  height: 69vh;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
