--- a/src/components/Film.css
+++ b/src/components/Film.css
@@ -1,9 +1,8 @@
 .film {
+  height: 33vw;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  width: 23vw;
-  height: 60vh;
 }
 
 .film:hover {
