--- a/src/components/SelectedDirectorFilm.css
+++ b/src/components/SelectedDirectorFilm.css
@@ -15,13 +15,18 @@ h2 {
 }
 
 .modal__container {
-  height: 69;
+  height: 69vh;
   width: 100vw;
   display: flex;
   flex-direction: row;
   align-items: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
+  background-size: cover;
 }
 
+/* NOTE!!!!  DO NOT MAKE CHANGES TO MODAL_IMAGE WIDTH PROPERTY WITHOUT CHECKING CONTENT_BACKGROUND BELOW. */
 .modal__image {
   width: 42vh;
   height: 69vh;
@@ -37,8 +42,10 @@ h2 {
   justify-content: flex-end;
 }
 
+/* NOTE!!!! THE MIN-WIDTH PROPERTY DEPENDS ON THE WIDTH PROPERTY OF MODAL_IMAGE, ABOVE */
 .content__background {
-  background-color: rgba(14, 13, 13, 0.777);
+  min-width: calc(100vw - 42vh);
+  background-color: rgba(14, 13, 13, 0.555);
   padding: 25px;
 }
 
